# nectarine

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  application.yaml  pyproject.toml  requirements.txt
.argocd/: application.yaml
.argocd/base/: application.yaml
.github/templates/: build.yml
.github/workflows/: .build.template.yml  .test.template.yml  build.template.yml  build.yaml  build.yml  test.template.yml
.k8s/base/: kustomization.yaml  workflow.yaml
argocd/: application.yaml
examples/sample/: config.yaml
helm/milvus/: Chart.yaml
helm/milvus/templates/: milvus_manifest.yaml
helm/nectarine/: Chart.yaml  values.yaml
helm/nectarine/templates/: configmap.yaml  workflow.yaml
nectarine/: __init__.py  _config.py  _util.py  step.py
nectarine/train/: __init__.py  __main__.py  _train.py  recommender.py  step.py  tower.py
nectarine/train/callbacks/: index.py
nectarine/train/layers/: __init__.py  features.py  output.py  tower.py
nectarine/train/models/: __init__.py  candidate.py  index.py  query.py  recommender.py  sequential.py  (+2 more)
nectarine/transform/: __init__.py  __main__.py  _transform.py  base.py  extract.py  lookup.py  output.py  step.py  transform.py  transformer.py
requirements/: common.txt  transform.txt
src/nectarine/: __init__.py
tests/: config.yaml  test_workflow.py
tests/train/: test_recommender.py  test_tower.py
tests/transform/: test_encoders.py  test_extract.py  test_main.py  test_output.py  test_transform.py
xtrax/: __init__.py  extract.py
xtrax/encode/: __init__.py  features.py  min_max.py  one_hot.py
xtrax/feature/: __init__.py  base.py  extract.py  transform.py
xtrax/transform/: __init__.py  _main.py  extract.py  feature.py  features.py  min_max.py  transform.py
(+22 files in other folders)
