[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nectarine"
readme = "README"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "pytest", "pre-commit"]

[tool.setuptools.dynamic]
version = { attr = "nectarine.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.isort]
profile = "black"
lines_after_imports = 2
